# gjs-rs

./: .gitmodules  Cargo.toml  Gir.toml  Gjs-1.0.gir  README.md  fix.sh  regen.sh
examples/: main.js  simple.rs
gjs-sys/: Cargo.toml  Gir.toml
gjs-sys/src/: lib.rs
gjs-sys/src/auto/: versions.txt
src/: context.rs  lib.rs  profiler.rs
src/auto/: context.rs  coverage.rs  enums.rs  functions.rs  mod.rs  profiler.rs  versions.txt
