[package]
name = "gjs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["gjs-sys"]

[features]
default = ["v1_66"]
v1_66 = ["gjs-sys/v1_66"]

[dependencies]
gjs-sys = { path = "./gjs-sys" }
libc = "0.2"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"

[package.metadata.docs.rs]
all-features = true
# For build.rs scripts
rustc-args = ["--cfg", "docsrs"]
# For rustdoc
rustdoc-args = ["--cfg", "docsrs"]
